--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <script id="bookmarks-categories" type="text/x-jsrender">
         {{for}}
-            <a href="{{:link}}" class="grid-item">
+            <a href="./pages/category.html?category={{:name}}" class="grid-item">
                 <h3>{{:title}}</h3>
                 <p>{{:text}}</p>
             </a>
