--- a/pages/category.html
+++ b/pages/category.html
@@ -49,7 +49,7 @@
     </div>
 
     <script>
-        JSONFromURL("../content/" + getURLParam("category") + ".json")
+        JSONFromURL("../content/category/" + getURLParam("category") + ".json")
             .then(content => {
                 renderTemplateWithData(content.cards, "cards", "cards-container");
                 updateCategoryPageWithName(getURLParam("category"));
