corrected speed dial links

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <script id="speed-dial-links" type="text/x-jsrender">
         {{for}}
-            <a href="{{:link}}" class="grid-item">
+            <a href="{{:link}}" class="grid-item" target="_blank">
                 <p><span class="badge backgroud-{{:badgeColor}} text-color-{{:badgeTextColor}}">{{:badgeText}}</span> {{:title}}</p>
             </a>
         {{/for}}
