--- a/pages/cv.html
+++ b/pages/cv.html
@@ -34,13 +34,11 @@
     </script>
 
     <script id="bullets" type="text/x-jsrender">
-        <ul>
             {{for}}
                 <li>
                     <p>{{:#data}}</p>
                 </li>
             {{/for}}
-        </ul>
     </script>
 
     <script id="skills" type="text/x-jsrender">
@@ -98,8 +96,8 @@
     </div>
 
     <div class="flex-container">
-        <section id="bullets-container">
-        </section>
+        <ul id="bullets-container">
+        </ul>
     </div>
 
     <div>
