--- a/pages/edit-secrets.html
+++ b/pages/edit-secrets.html
@@ -27,6 +27,14 @@
         {{/for}}
     </script>
 
+    <script id="bookmarks-template" type="text/x-jsrender">
+        {{for}}
+            <a href="{{:link}}" class="grid-item" target="_blank">
+                <p><span class="badge backgroud-{{:badgeColor}} text-color-{{:badgeTextColor}}">{{:badgeText}}</span> {{:title}}</p>
+            </a>
+        {{/for}}
+    </script>
+
     <div class="flex-container">
         <section class="container-header">
             <h1>Update</h1>
@@ -42,33 +50,39 @@
         <section class="container-header">
             <h1>Preview</h1>
         </section>
+        <section id="bookmarks-container" class="grid-container">
+        </section>
         <section id="categories-container" class="grid-container">
         </section>
     </div>
 
     <script>
-        function renderCategories() {
+        function renderSecrets() {
             var $ = window.jsrender;
-            var categoriesRaw = window.localStorage.getItem("secret_categories");
-            var categories = JSON.parse(categoriesRaw);
+            var secretsRaw = window.localStorage.getItem("secrets");
+            var secrets = JSON.parse(secretsRaw);
             var categoriesTemplate = $.templates("#categories-template");
-            var categoriesHtml = categoriesTemplate.render(categories);
+            var categoriesHtml = categoriesTemplate.render(secrets.categories);
+
+            var bookmarksTemplate = $.template("#bookmarks-template");
+            var bookmarksHtml = bookmarksTemplate.render(secrets.bookmarks);
 
             const textarea = document.getElementById('categories-content');
-            textarea.value = categoriesRaw;
+            textarea.value = secretsRaw;
 
             document.getElementById("categories-container").innerHTML = categoriesHtml;
+            document.getElementById("bookmarks-container").innerHTML = bookmarksHtml;
         }
 
-        function updateCategories() {
+        function updateSecrets() {
             const textarea = document.getElementById('categories-content');
             const currentValue = JSON.parse(textarea.value);
-            window.localStorage.setItem("secret_categories", JSON.stringify(currentValue));
-            renderCategories();
+            window.localStorage.setItem("secrets", JSON.stringify(currentValue));
+            renderSecrets();
         }
 
-        document.getElementById("update-button").addEventListener("click", updateCategories);
-        renderCategories();
+        document.getElementById("update-button").addEventListener("click", updateSecrets);
+        renderSecrets();
     </script>
 </body>
 </html>
