updated npe check

--- a/pages/edit-secrets.html
+++ b/pages/edit-secrets.html
@@ -61,17 +61,19 @@
             var $ = window.jsrender;
             var secretsRaw = window.localStorage.getItem("secrets");
             var secrets = JSON.parse(secretsRaw);
-            var categoriesTemplate = $.templates("#categories-template");
-            var categoriesHtml = categoriesTemplate.render(secrets.categories);
+            if (secrets != null) {
+                var categoriesTemplate = $.templates("#categories-template");
+                var categoriesHtml = categoriesTemplate.render(secrets.categories);
 
-            var bookmarksTemplate = $.template("#bookmarks-template");
-            var bookmarksHtml = bookmarksTemplate.render(secrets.bookmarks);
+                var bookmarksTemplate = $.template("#bookmarks-template");
+                var bookmarksHtml = bookmarksTemplate.render(secrets.bookmarks);
 
-            const textarea = document.getElementById('categories-content');
-            textarea.value = secretsRaw;
+                const textarea = document.getElementById('categories-content');
+                textarea.value = secretsRaw;
 
-            document.getElementById("categories-container").innerHTML = categoriesHtml;
-            document.getElementById("bookmarks-container").innerHTML = bookmarksHtml;
+                document.getElementById("categories-container").innerHTML = categoriesHtml;
+                document.getElementById("bookmarks-container").innerHTML = bookmarksHtml;
+            }
         }
 
         function updateSecrets() {
