updated layout of main page

--- a/index.html
+++ b/index.html
@@ -84,9 +84,15 @@
 
     <div class="flex-container">
         <section class="container-header">
-            <h1>Secret</h1>
+            <h1>S-Bookmarks</h1>
         </section>
         <section id="secret-bookmarks-container" class="grid-container">
+        </section>
+    </div>
+
+    <div class="flex-container">
+        <section class="container-header">
+            <h1>S-Categories</h1>
         </section>
         <section id="secret-categories-container" class="grid-container">
         </section>
