--- a/pages/category.html
+++ b/pages/category.html
@@ -21,6 +21,15 @@
 <body>
     <script src="../script/masonry.pkgd.min.js"></script>
 
+    <script id="categories" type="text/x-jsrender">
+        {{for}}
+        <a href="./pages/category.html?category={{:path}}" class="grid-item">
+            <h3>{{:title}}</h3>
+            <p>{{:text}}</p>
+        </a>
+        {{/for}}
+    </script>
+
     <script id="cards" type="text/x-jsrender">
         {{for}}
         <div class="card-wrapper">
@@ -44,6 +53,8 @@
         <section class="container-header">
             <a href="../index.html"><h1 id="home-link-name">Category</h1></a>
         </section>
+        <section id="categories-container" class="cards-container" data-masonry='{"percentPosition": true }'>
+        </section>
         <section id="cards-container" class="cards-container" data-masonry='{"percentPosition": true }'>
         </section>
     </div>
@@ -51,8 +62,9 @@
     <script>
         JSONFromURL("../content/categories/" + getURLParam("category") + ".json")
             .then(content => {
+                renderTemplateWithDataAndApplyMasonry(content.categories, "categories", "categories-container");
                 renderTemplateWithDataAndApplyMasonry(content.cards, "cards", "cards-container");
-                updateCategoryPageWithName(getURLParam("category"));
+                updateCategoryPageWithName(content.name);
             });
     </script>
 </body>
