playing with layout

--- a/pages/category.html
+++ b/pages/category.html
@@ -53,10 +53,12 @@
         <section class="container-header">
             <a href="../index.html"><h1 id="home-link-name">Category</h1></a>
         </section>
-        <section id="categories-container" class="cards-container" data-masonry='{"percentPosition": true }'>
-        </section>
-        <section id="cards-container" class="cards-container" data-masonry='{"percentPosition": true }'>
-        </section>
+        <div>
+            <section id="categories-container" class="cards-container" data-masonry='{"percentPosition": true }'>
+            </section>
+            <section id="cards-container" class="cards-container" data-masonry='{"percentPosition": true }'>
+            </section>
+        </div>
     </div>
 
     <script>
