--- a/pages/category.html
+++ b/pages/category.html
@@ -56,7 +56,7 @@
         <section class="cards-container">
             <section id="categories-container" class="cards-container" data-masonry='{"percentPosition": true }'>
             </section>
-            <section id="cards-container" class="cards-container card-wrapper" data-masonry='{"percentPosition": true }'>
+            <section id="cards-container" class="cards-container" data-masonry='{"percentPosition": true }'>
             </section>
         </section>
     </div>
