updated path to the link

--- a/pages/category.html
+++ b/pages/category.html
@@ -23,7 +23,7 @@
 
     <script id="categories" type="text/x-jsrender">
         {{for}}
-        <a href="./pages/category.html?category={{:path}}" class="grid-item">
+        <a href="./category.html?category={{:path}}" class="grid-item">
             <h3>{{:title}}</h3>
             <p>{{:text}}</p>
         </a>
