--- a/pages/markdown.html
+++ b/pages/markdown.html
@@ -13,60 +13,27 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
     <link rel="manifest" href="../img/site.webmanifest">
 
-    <script src="../script/jsrender.min.js" ></script>
+    <script src="../script/marked.min.js" ></script>
     <script src="../script/common.js"></script>
 
     <meta name="theme-color" content="#000000">
 </head>
 <body>
-    <script src="../script/masonry.pkgd.min.js"></script>
-
-    <script id="links" type="text/x-jsrender">
-        {{for}}
-        <a href="{{:path}}" class="grid-item">
-            <h3>{{:title}}</h3>
-            <p>{{:text}}</p>
-        </a>
-        {{/for}}
-    </script>
-
-    <script id="cards" type="text/x-jsrender">
-        {{for}}
-        <div class="card-wrapper">
-            <div class="card">
-                <div class="card-header">
-                    <h3>{{:title}}</h3>
-                </div>
-                <div class="card-body">
-                    {{for links}}
-                        <a href="{{:#data[0]}}" target="_blank">
-                            <div><span class="badge backgroud-{{:#data[2]}} text-color-{{:#data[4]}}">{{:#data[3]}}</span> {{:#data[1]}}</div>
-                        </a>
-                    {{/for}}
-                </div>
-            </div>
-        </div>
-        {{/for}}
-    </script>
-
     <div class="flex-container">
         <section class="container-header">
-            <a href="../index.html"><h1 id="home-link-name">Category</h1></a>
+            <a href="../index.html"><h1 id="home-link-name">Markdown</h1></a>
         </section>
         <section class="cards-container">
-            <section id="links-container" class="grid-container">
-            </section>
-            <section id="cards-container" class="cards-container" data-masonry='{"percentPosition": true }'>
+            <section id="markdown-content">
             </section>
         </section>
     </div>
 
     <script>
-        JSONFromURL("../content/categories/" + getURLParam("category") + ".json")
+        MarkdownFromURL("../content/markdown/" + getURLParam("item"))
             .then(content => {
-                renderTemplateWithData(content.links, "links", "links-container");
-                renderTemplateWithDataAndApplyMasonry(content.cards, "cards", "cards-container");
-                updateCategoryPageWithName(content.name);
+                document.getElementById('markdown-content').innerHTML = marked.parse(content);
+                updateCategoryPageWithName(getURLParam("item"));
             });
     </script>
 </body>
